<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pictureCardHorizontal"
    android:layout_width="@dimen/cardview_tamanio"
    android:layout_height="@dimen/cardview_tamanio"
    cardView:cardCornerRadius="@dimen/cornerradius_cardview"
    android:layout_marginBottom="@dimen/edit_createaccount">

    <FrameLayout
        android:layout_width="@dimen/cardview_tamanio"
        android:layout_height="@dimen/cardview_tamanio">

        <ImageView
            android:id="@+id/picture_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_tamanio"
            android:background="@drawable/cardview"
            android:scaleType="centerCrop"
            android:transitionName="@string/transitionname_picture"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/textsize_account"
            android:paddingBottom="@dimen/textsize_account"
            android:background="@color/backgroundTextcard">
            <TextView
                android:id="@+id/username_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_card"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_card"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/first_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firsttext_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize_firs_wordcard"/>
                <TextView
                    android:id="@+id/time_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timecard_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize_firs_wordcard"
                    android:layout_marginLeft="@dimen/separation_word"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/like_margintop_card">
                <CheckBox
                    android:id="@+id/licked_check_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"/>
                <TextView
                    android:id="@+id/like_numbercard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/like_numbercard"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize_second_wordcard"
                    android:layout_marginLeft="@dimen/separation_word"/>
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</android.support.v7.widget.CardView>